static/css/jamie.css
.fa {
  color: rgba(255, 255, 255, 0.5);
}

.fa:hover {
  color: rgba(255, 255, 255, 1);
}

.pagination {
  display: block;
  overflow: hidden;
  /* clearfix */
  margin-left: -1rem;
  margin-right: -1rem;
  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
  color: #ccc;
  text-align: center;
}

/* Pagination items can be `span`s or `a`s */
.pagination-item {
  display: block;
  padding: 1rem;
  border: 1px solid #eee;
}

.pagination-item:first-child {
  margin-bottom: -1px;
}

/* Only provide a hover state for linked pagination items */
a.pagination-item:hover {
  background-color: #f5f5f5;
}

@media (min-width: 30em) {
  .pagination {
    margin: 3rem 0;
  }

  .pagination-item {
    float: left;
    width: 50%;
  }

  .pagination-item:first-child {
    margin-bottom: 0;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
  }

  .pagination-item:last-child {
    margin-left: -1px;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
  }
}

code,
pre {
  font-family: 'Berkeley Mono', 'Courier New', Courier, monospace;
  font-size: 75%;
  white-space: pre;
  overflow-x: scroll;
  padding-bottom: 1em;
}

.highlight {
  border-radius: 5px;
  padding: 5px;
  border: 1px #ddd solid;
  border-left: 5px #75b5aa solid;
  background-color: #fff;
}

